@@ -4869,6 +4869,24 @@ SCIP_CLIQUE** SCIPgetCliques(
    SCIP*                 scip                /**< SCIP data structure */
    );
 
+/** returns whether there is a clique that contains both given variable/value pairs;
+ *  the variables must be active binary variables;
+ *  if regardimplics is FALSE, only the cliques in the clique table are looked at;
+ *  if regardimplics is TRUE, both the cliques and the implications of the implication graph are regarded
+ *
+ *  @note a variable with it's negated variable are NOT! in a clique
+ *  @note a variable with itself are in a clique
+ */
+extern
+SCIP_Bool SCIPhaveVarsCommonClique(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_VAR*             var1,               /**< first variable */
+   SCIP_Bool             value1,             /**< value of first variable */
+   SCIP_VAR*             var2,               /**< second variable */
+   SCIP_Bool             value2,             /**< value of second variable */
+   SCIP_Bool             regardimplics       /**< should the implication graph also be searched for a clique? */
+   );
+
 /** sets the branch factor of the variable; this value can be used in the branching methods to scale the score
  *  values of the variables; higher factor leads to a higher probability that this variable is chosen for branching
  */
