@@ -135,6 +135,7 @@ interface
   combination for a variable w.r.t. root solution value, root LP objective value, and root reduced cost
 - removed method SCIPvarGetRootRedcost() replaced by SCIPvarGetBestRootRedcost()
 - SCIPprintCons() does not print termination symbol ";\n" anymore; if wanted, use SCIPinfoMessage() to print ";\n" manually
+- new method SCIPhaveVarsCommonClique() in scip.{h,c}, to check for common clique information on two given variables
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
